--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,20 @@
-[package]
-name = "jac"
+[workspace]
+members = [
+  "crates/quickpars",
+  "crates/jacc"
+]
+
+resolver = "2"
+
+[workspace.package]
+version = "1.3.0"
+authors = ["The Javy Project Developers"]
 edition = "2021"
+license = "Apache-2.0 WITH LLVM-exception"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[workspace.dependencies]
+anyhow = "1.0"
 
-[dependencies]
-anyhow = "1"
+[profile.release]
+lto = true
+opt-level = 3
