--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,5 @@
 [workspace]
-members = [
-  "crates/quickpars",
-  "crates/jacc"
-]
+members = ["crates/quickpars", "crates/jacc"]
 
 resolver = "2"
 
@@ -14,6 +11,7 @@ license = "Apache-2.0 WITH LLVM-exception"
 
 [workspace.dependencies]
 anyhow = "1.0"
+smallvec = "1.13.1"
 
 [profile.release]
 lto = true
