--- a/crates/jacc/Cargo.toml
+++ b/crates/jacc/Cargo.toml
@@ -8,3 +8,9 @@ license.workspace = true
 [dependencies]
 anyhow = { workspace = true }
 quickpars = { path = "../quickpars" }
+parsetrace = { path = "../parsetrace" }
+javy = { git = "https://github.com/bytecodealliance/javy.git" }
+
+[[bin]]
+name = "jacc"
+path = "src/main.rs"
