--- a/crates/parsetrace/Cargo.toml
+++ b/crates/parsetrace/Cargo.toml
@@ -8,4 +8,5 @@ license.workspace = true
 [dependencies]
 anyhow = { workspace = true }
 smallvec = { workspace = true }
+quickpars = { path = "../quickpars" }
 leb128 = "0.2.5"
