quickpars: Improvements around the semantics of closure variables
`closure_var_count` and `closure_vars` represent the variables that are
reachable from a given closure, no the funciton's closures normally
reachable via the constant pool.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,10 @@
 [workspace]
-members = ["crates/quickpars", "crates/jacc", "crates/parsetrace"]
+members = [
+  "crates/quickpars",
+  "crates/compiler",
+  "crates/parsetrace",
+  "crates/rt"
+]
 
 resolver = "2"
 
