--- a/crates/parsetrace/Cargo.toml
+++ b/crates/parsetrace/Cargo.toml
@@ -9,7 +9,7 @@ license.workspace = true
 anyhow = { workspace = true }
 smallvec = { workspace = true }
 quickpars = { path = "../quickpars" }
-javy = { git = "https://github.com/bytecodealliance/javy.git" }
+javy = "3.0.1"
 leb128 = "0.2.5"
 
 [[bin]]
