Introduce the translate and rt crates.
Introduces the trnaslate crate to ease the sharing of the parsing and in
memory representation of programs.

Introduces the rt crate, which will hold runtime specific
implementations.

Refactor parsetrace to make use of the translate crate.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [workspace]
+resolver = "2"
 members = [
   "crates/quickpars",
   "crates/compiler",
   "crates/parsetrace",
-  "crates/rt"
+  "crates/translate",
+  "crates/rt",
 ]
-
-resolver = "2"
 
 [workspace.package]
 version = "1.3.0"
