--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,7 @@ on:
 jobs:
   cache:
     name: Setup cargo cache
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
 
@@ -32,6 +33,7 @@ jobs:
 
   check:
     name: Check workspace
+    runs-on: ubuntu-latest
     needs: cache
     steps:
       - name: cargo check & cargo build
@@ -41,6 +43,7 @@ jobs:
 
   test:
     name: Test workspace
+    runs-on: ubuntu-latest
     needs: cache
     steps:
       - name: cargo test
