--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   cache:
-    name: Setup cargo cache
+    name: Setup Cargo Cache
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -32,20 +32,22 @@ jobs:
             ${{ runner.os }}-cargo-target
 
   check:
-    name: Check workspace
+    name: Check Workspace
     runs-on: ubuntu-latest
     needs: cache
     steps:
+      - uses: actions/checkout@v2
       - name: cargo check & cargo build
         run: |
           cargo check
           cargo build
 
   test:
-    name: Test workspace
+    name: Test Workspace
     runs-on: ubuntu-latest
     needs: cache
     steps:
+      - uses: actions/checkout@v2
       - name: cargo test
         run: |
           cargo test
