--- a/crates/compiler/Cargo.toml
+++ b/crates/compiler/Cargo.toml
@@ -8,3 +8,4 @@ license.workspace = true
 [dependencies]
 anyhow = { workspace = true }
 jac-translate = { path = "../translate/" }
+waffle = "0.1.1"
