Correctly handle offsets
This commit ensures that bytecode offsets are correctly handled, the
bytecode structure provides a relative offset, however, it's useful to
provide an absolute offset to minimize the calculation when
printing/compiling.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,15 @@
+.direnv/
 target/
+.envrc
+## Emacs.gitignore
+
+# -*- mode: gitignore; -*-
+*~
+\#*\#
+/.emacs.desktop
+/.emacs.desktop.lock
+*.elc
+auto-save-list
+tramp
+.\#*
 
