Start more work towards the runtime
Notably, this adds a way to handle closure creation via the
`JS_NewCFunctionData` function.

There is still some investigation going on regarding how to handle
opcodes like `put_var_ref` and `get_var_ref`

--- a/crates/rt/Cargo.toml
+++ b/crates/rt/Cargo.toml
@@ -9,6 +9,7 @@ license.workspace = true
 javy = { workspace = true }
 javy-plugin-api = "4.1.0"
 wit-bindgen = "0.47.0"
+anyhow = { workspace = true }
 
 [lib]
 name = "jacrt"
